Updaate lead, closes #3
